k8s/sandbox/opa-gatekeeper/base-constraints/allowed_container_registries.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: allowed-container-registries
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    repos:
      - "hobsons-platform-docker-sandbox-local.jfrog.io/platform/"
    excludeNamespace:
      - kube-system
      - kube-public
      - kube-node-lease
      - default
      - ops
      - ops-managed
      - linkerd
